istio-deployments/payment-authorization/payments-authorization.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payments-authorization-virtual-service
spec:
  hosts:
  - payments-authorization
  http:
  - route:
    - destination:
        host: payments-authorization
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payments-authorization-destination-rule
spec:
  host: payments-authorization
  subsets:
  - name: v1
    labels:
      version: v1
